# rust-rocket_boiler_plate

./: Cargo.toml  request_log.txt
src/: main.rs
src/app/: test_route.rs
src/modules/: cors.rs  error_handler.rs  middle_ware.rs  mod.rs  request_logger.rs  response_handler.rs  util.rs
